# LTL2024

./: README.md  optitrack_pick_and_place.py  pick_and_place.py  ros.txt
exercise3/include/exercise3/: functions.h
exercise3/model/robots/: sim.urdf  sim.urdf.xacro
exercise3/src/: pick_and_place.cpp
ltl_gripper/: CMakeLists.txt  package.xml
ltl_gripper/src/: test.cpp
ltl_project/: CMakeLists.txt  package.xml
ltl_project/launch/: sim_with_box.launch
ltl_project/model/robots/: sim.urdf  sim.urdf.xacro
ltl_project/src/: pick.cpp  place.cpp
lumi_testbed/: README.md
lumi_testbed/lumi_description/robots/: robot.urdf  robot_table_env.urdf
lumi_testbed/lumi_moveit_config/config/: lumi.srdf
lumi_testbed/lumi_mujoco/launch/: simulation.launch
mujoco_ros_control/: ReadMe.md
mujoco_ros_control/src/: mujoco_control.cpp
ros_topic/: CMakeLists.txt  package.xml
ros_topic/src/: ros_intro.cpp
skymul_natnet_ros_cpp/config/: initiate.yaml
skymul_natnet_ros_cpp/launch/: natnet_ros.launch
