<?xml version="1.0"?>
<package format="2">
  <name>ltl_project</name>
  <version>1.0.0</version>
  <description>
    Package ltl_project.
  </description>
  <maintainer email="vladimir.petrik@aalto.fi">Vladimir Petrik</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>moveit_core</depend>
  <depend>moveit_visual_tools</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_planning_interface</depend>

</package>
